# YTU_Bilgisayar_Muhendisligi_Arsiv

./: .gitattributes  .gitignore  AGENT.md  DFA and NFA  README.md  arayuz.sh  buffered_writer.py  katkida_bulunanlar.json  nul
1-1/: README.md
1-2/: README.md
2-1/: README.md
2-2/: README.md
2-2/Bilgisayar Organizasyonu/Bilgisayar Donanımı/ödevler/2022/odev2/ondergormez/Codes/: 1.c  2.c  meson.build  readme.md
2-2/Veri Yapıları ve Algoritmalar/ödevler/2022/ödev1/onder_gormez/: 21501035.c  DoublyLinkedList.c  DoublyLinkedList.h  FastLinkedList.c  FastLinkedList.h  main.c  meson.build  readme.md
2-2/Veri Yapıları ve Algoritmalar/ödevler/2022/ödev1/onder_gormez/tests/: main.cpp  meson.build
3-1/: README.md
3-2/: README.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/: Course.cpp  Course.h  InformationSystem.cpp  InformationSystem.h  PaymentInfo.cpp  PaymentInfo.h  Person.cpp  Person.h  Registrar.cpp  Registrar.h  SchoolBranch.cpp  SchoolBranch.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Worker.cpp  Worker.h  main.cpp  meson.build  readme.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/00-UseCaseScenario/: readme.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/01-ClassDiagram/: Student.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/02-SequenceDiagram/: Student.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/03-StateDiagram/: Student.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/04-GanttDiagram/: Student.md
3-2/Yazılım Mühendisliği/projeler/2022/onder_gormez/tests/: 21011111.cpp  21501027.cpp  21501035.cpp  21501045.cpp  21501081.cpp  main.cpp  meson.build  readme.md
4-1/: README.md
4-2/: README.md
Bilgisayar Projesi/: README. md  README.md
Bitirme Çalışması/: README.md
Bitirme Çalışması-Projesi/: README.md
Lisansüstü/: README.md
Mesleki Seçmeli/: README.md
Mesleki Seçmeli 1/: README.md
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/: package.xml
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/launch/: empty_world_multi_robot_example.launch  old_p3at.launch  very_many_robots.launch
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/meshes/asus_camera/: asus_camera_simple.dae
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/meshes/hokuyo_utm30lx/: hokuyo_utm_30lxTEST_SELF_FILTER.dae
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/meshes/original/: body.stl
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/meshes/p3at_meshes/: chassis.dae  wheel.dae
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/meshes/p3dx_meshes/: Coordinates
Mesleki Seçmeli 1/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_description/urdf/: pioneer3at.urdf.xacro  pioneer3at_body.xacro
Mesleki Seçmeli/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_plugin/: CMakeLists.txt  package.xml
Mesleki Seçmeli/Robot Teknolojisine Giriş/ödevler/2022/rtg ödev1/World_Files/p3at_plugin/src/: p3at.cc
Sosyal Seçmeli 1/: README.md
google_forum_islemleri/: .gitignore  google_form_rutin_kontrol.py  hoca_icerikleri_guncelle.py
mulakat_tecrubeleri/: README.md  csv_to_md.py
readme taslakları/: ara-bitirme proje taslağı.md  ders notu bilgi taslağı.md  proje tanım taslağı.md  ödev tanım taslağı.md
readme_guncelleme_arayuzu_python/: README.md  cikti_yazdirma.py  coklu_satir_girdi_dialog.py  donem_ekle_guncelle_window.py  giris_ekle_guncelle_window.py  github_metin_islemleri.py  konfigurasyon_json_kontrol.py  (+6 more)
(+6006 files in other folders)
