message('meson.build file find successfully in: ' + meson.current_source_dir())

executable('LanguageSchool',
           'InformationSystem.cpp',
           'main.cpp',
           'PaymentInfo.cpp',
           'Person.cpp',
           'Registrar.cpp',
           'SchoolBranch.cpp',
           'Student.h',
           'Teacher.cpp',
           'Worker.cpp',
           install: false
)

subdir('tests')
