message('meson.build file find successfully in: ' + meson.current_source_dir())

executable('FastLinkedList',
           'main.c',
           'DoublyLinkedList.c',
           'FastLinkedList.c',
           install : false)

executable('FastLinkedListSingleFile',
           '21501035.c',
           install : false)

subdir('tests')