<?xml version="1.0"?>
<package>
  <name>p3at_plugin</name>
  <version>1.0.0</version>
  <description>
    Pioneer 3at plugin
  </description>

  <license>Apache 2.0</license>
  <maintainer email="nate@osrfoundation.org">Nate Koenig</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>xacro</run_depend>
</package>
