project('Computer Hardware', 'c', 'cpp',
  version : '0.1',
  default_options : ['c_std=c99', 'cpp_std=c++17', 'warning_level=3'])

message('meson.build file find successfully in: ' + meson.current_source_dir())

executable('1.out',
           '1.c',
           install : false)

executable('2.out',
           '2.c',
           install : false)

executable('3.out',
           '3.c',
           install : false)
